Fix font size in banner and alignment of stretch star

--- a/frontend/src/style/styles.scss
+++ b/frontend/src/style/styles.scss
@@ -54,6 +54,10 @@ body.okr {
     font-size: 14px;
   }
 
+  .quarter-filter-text span {
+    font-size: 16px;
+  }
+
   a {
     color: $pz-dark-blue;
     text-decoration: none;
